the logic of the game is now complete

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
      <h1>Are you feeling lucky?</h1>
      <h2 class="playerOneTitle">Player 1</h2>
-     <h2 class="playerTwoTitle">Player 1</h2>
+     <h2 class="playerTwoTitle">Player 2</h2>
      <h3 class="playerOneInfo">Player 1 Info</h3>
      <h3 class="playerTwoInfo">Player 2 Info</h3>
      <img class="diceimage" src="/img/dice1.png" alt="dice score one">
      <button class="start">Start Game</button>
      <button class="roll">Roll Me</button>
-     <h2> Who is rolling? </h2>
+     <h2 class="playerOneScoreAlert"></h2>
+     <h2 class="playerTwoScoreAlert"></h2>
 
     <script src="app.js"></script>
 </body>
