--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Dice Game - 2 Can Play</title>
 </head>
+
 <body>
 
     <!-- What do I need to display in my game? -->
-
-     <h1>Are you feeling lucky?</h1>
-     <h2 class="playerOneTitle">Player 1</h2>
-     <h2 class="playerTwoTitle">Player 2</h2>
-     <h3 class="playerOneInfo">Player 1 Info</h3>
-     <h3 class="playerTwoInfo">Player 2 Info</h3>
-     <img class="diceimage" src="/img/dice1.png" alt="dice score one">
-     <button class="start">Start Game</button>
-     <button class="roll">Roll Me</button>
-     <h2 class="playerOneScoreAlert"></h2>
-     <h2 class="playerTwoScoreAlert"></h2>
+    <div class="header">
+        <h1>Are you feeling lucky?</h1>
+    </div>
+    <div class="playerContents">
+        <div class=playerOneLeft style="float:left">
+            <h2 class="playerOneTitle">Player 1</h2>
+            <h3 class="playerOneInfo">Player 1 Info</h3>
+            <h3 class="playerOneScoreAlert"></h3>
+        </div>
+        <div class=playerTwoRight style="float:right">
+            <h2 class="playerTwoTitle">Player 2</h2>
+            <h3 class="playerTwoInfo">Player 2 Info</h3>
+            <h3 class="playerTwoScoreAlert"></h3>
+        </div>
+    </div>
+    <img class="diceimage" src="/img/dice1.png" alt="dice score one">
+    <button class="start">Start Game</button>
+    <button class="roll">Roll Me</button>
 
     <script src="app.js"></script>
 </body>
+
 </html>
