finish first version of CSS with FlexBox

--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
         <h1>Are you feeling lucky?</h1>
     </div>
     <div class="playerContents">
-        <div class=playerOneLeft style="float:left">
+        <div class=playerOneLeft >
             <h2 class="playerOneTitle">Player 1</h2>
             <h3 class="playerOneInfo">Player 1 Info</h3>
             <h3 class="playerOneScoreAlert"></h3>
         </div>
-        <div class=playerTwoRight style="float:right">
+
+        <div class=centralBlock>
+                <img class="diceimage" src="/img/dice1.png" alt="dice score one">
+                <button class="start">Start Game</button>
+                <button class="roll">Roll Me</button>
+            </div>
+
+        <div class=playerTwoRight >
             <h2 class="playerTwoTitle">Player 2</h2>
             <h3 class="playerTwoInfo">Player 2 Info</h3>
             <h3 class="playerTwoScoreAlert"></h3>
         </div>
     </div>
-    <img class="diceimage" src="/img/dice1.png" alt="dice score one">
-    <button class="start">Start Game</button>
-    <button class="roll">Roll Me</button>
-
+    <!-- <div class=centralBlock>
+        <img class="diceimage" src="/img/dice1.png" alt="dice score one">
+        <button class="start">Start Game</button>
+        <button class="roll">Roll Me</button>
+    </div> -->
     <script src="app.js"></script>
 </body>
 
